--- a/public/index.html
+++ b/public/index.html
@@ -130,6 +130,7 @@
 	
 	<img class="info-img-flyer1" src="images/demo/Flyer001.jpg">
 	<img class="info-img-flyer2" src="images/demo/Flyer002.jpg">
+	<img class="info-img-sanitizante" src="images/demo/Sanitizante.jpg">
 	
 
 	<section class="overlay-dark bg-img1 dark-bg short-section">
